# smith-ai-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  endpoints.yaml  logging_config.py  pyproject.toml  renovate.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
smith_ai_mcp/: __init__.py  client.py  credentials.py  server.py
smith_ai_mcp/setup/: __init__.py  setup.py  verify.py
tests/: config.py
