[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "smith-ai-mcp"
version = "0.1.0"
description = "MCP server for Smith.ai — outbound call requests, campaign management, and call record retrieval for law firms"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.28.0",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "keyring>=25.7.0",
]

[project.scripts]
smith-ai-mcp = "smith_ai_mcp.server:main"
smith-ai-mcp-setup = "smith_ai_mcp.setup.setup:main"
smith-ai-mcp-verify = "smith_ai_mcp.setup.verify:main"

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "dist", "build"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
